	(gdb-threads-mode-map, def-gdb-thread-buffer-command)
	(def-gdb-thread-buffer-simple-command)
	(gdb-display-stack-for-thread, gdb-display-locals-for-thread)
	(gdb-display-registers-for-thread, gdb-frame-stack-for-thread)
	(gdb-frame-locals-for-thread, gdb-frame-registers-for-thread): New
	commands which show buffers bound to thread.
	(gdb-stack-list-locals-regexp): Removed unused regexp.

2009-08-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (top): Make check for tramp-gvfs loading more
	robust.
	(tramp-handle-insert-file-contents): `unwind-protect' must be
	inside `with-parsed-tramp-file-name'.

	* net/tramp-gvfs.el (top): Remove superfluous message when loading
	fails.

2009-08-03  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (jdb): Set gud-jdb-classpath-string to current
	directory if CLASSPATH is not set.

2009-08-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-rfn-eshadow-update-overlay-regexp) New
	defconst.
	(tramp-rfn-eshadow-update-overlay): Use it.  (Bug#4004)

2009-08-02  Kevin Ryde  <user42@zip.com.au>

	* net/newst-backend.el (newsticker--raw-url-list-defaults): Update
	freshmeat link.  Delete newsforge.com as it seems gone.

2009-08-02  Chong Yidong  <cyd@stupidchicken.com>

	* select.el (x-set-selection): Doc fix (Bug#4021).

	* w32-fns.el (x-set-selection): Doc fix (Bug#4021).

	* help-fns.el (describe-variable): Treat list return values from
	dir-locals-find-file properly (Bug#4005).

2009-08-02  Julian Scheid <julians37@googlemail.com>  (tiny change)

	* net/tramp.el (tramp-debug-message): Print also microseconds.

2009-08-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-insert-file-contents): Optimize, when BEG
	or END is non-nil.
	(tramp-handle-vc-registered): Use `tramp-cache-inhibit-cache'.
	(tramp-get-debug-buffer): Change `outline-regexp' according to new
	format.

	* net/tramp-cache.el (tramp-cache-inhibit-cache ): New defvar.
	(tramp-get-file-property): Use it.